# FlotteKarte

./: .gitignore  COPYING  README.md  check-version.py  compile.sh  meson.build  pyproject.toml
.github/workflows/: sphinx.yml  testing.yml  versioncheck.yml
docs/: conf.py  index.rst
docs/api/: classes.rst
docs/usage/: installation.rst  quickstart.rst
flottekarte/: __init__.py  axes.py  extent.py  grid.py  interpolate.py  map.py  tensor.py
flottekarte/data/: __init__.py  geojson.py
flottekarte/extensions/: __init__.py  azimuth.py  boundary.py  cdll.py  gradients.py  grid.py  inverse.py  meson.build  meson_options.txt  streamlines.py  test-cdll.py  ticks.py
flottekarte/extensions/include/: aabbtree.hpp  augmentedproj.hpp  azimuth.hpp  boundary.hpp  geometry.hpp  gradient.hpp  grid.hpp  griddedinverter.hpp  index.hpp  interpolate.hpp  invert.hpp  linalg.hpp  objectbook.hpp  paths.hpp  pyapi.hpp  rk45.hpp  streamlines.hpp  tickfinder.hpp  types.hpp
flottekarte/extensions/include/backbone/: aabbbranch.hpp
flottekarte/extensions/src/: aabbtree.cpp  augmentedproj.cpp  azimuth.cpp  boundary.cpp  geometry.cpp  gradient.cpp  grid.cpp  griddedinverter.cpp  interpolate.cpp  invert.cpp  linalg.cpp  paths.cpp  pyapi.cpp  streamlines.cpp  tickfinder.cpp  types.cpp
flottekarte/extensions/subprojects/: libprojwrap.wrap
include/: augmentedproj.hpp  boundary.hpp  gradient.hpp  grid.hpp  griddedinverter.hpp  invert.hpp  paths.hpp  projwrapper.hpp  pyapi.hpp  tickfinder.hpp  types.hpp
projplot/: __init__.py  axes.py  grid.py  interpolate.py  map.py  projplot.py
projplot/extensions/: __init__.py  cdll.py  grid.py  inverse.py  ticks.py
src/: augmentedproj.cpp  boundary.cpp  gradient.cpp  grid.cpp  griddedinverter.cpp  invert.cpp  paths.cpp  projwrapper.cpp  pyapi.cpp  tickfinder.cpp  types.cpp
subprojects/: libprojwrap.wrap
subprojects/libprojwrap/: meson.build
subprojects/libprojwrap/include/: projwrapper.hpp  projwrappertypes.hpp
subprojects/libprojwrap/src/: projwrapper.cpp  projwrappertypes.cpp
testing/: test_cpp.py  test_geojson.py
testing/cpp/: meson.build
testing/cpp/src/: main.cpp  test_aabb.cpp  test_interpolate.cpp
testing/data/natural-earth/: COPYING  iceland.geojson
