# Python installation file.

[project]
name = "flottekarte"
version = "0.2.7"
description = "Plotting with PROJ and Matplotlib."
authors = [
    {name = "Malte J. Ziebarth", email = "ziebarth@gfz-potsdam.de"}
]
requires-python = ">=3.8"

[dependencies]
matplotlib = "^3.5.1"
numpy = "^1.22.0"
pyproj = "^3.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm", "meson"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flottekarte","flottekarte.extensions","flottekarte.data"]

[tool.setuptools.package-data]
flottekarte = ["extensions/libflottekarte.so", "extensions/meson.build",
               "extensions/meson_options.txt",
               "extensions/include/*", "extensions/src/*",
               "extensions/subprojects/*"]
